increase solver timeout.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,6 +28,8 @@ jobs:
       - run: opam pin add presigner.dev . --no-action
 
       - run: opam depext presigner --yes --with-doc --with-test
+        env:
+          OPAMSOLVERTIMEOUT: 120
 
       - run: opam install . --deps-only --with-doc --with-test
 
