--- a/presigner.opam
+++ b/presigner.opam
@@ -5,7 +5,7 @@ license: "MIT"
 homepage: "https://github.com/unrealakama/presigner"
 dev-repo: "git+ssh://git@github.com/UnrealAkama/aws-s3.git"
 bug-reports: "https://github.com/unrealakama/presigner"
-synopsis: "Small cli tool to generate presigned links."
+synopsis: "Small cli tool to generate presigned links for AWS S3"
 build: ["dune" "build" "@install"]
 build-test: ["dune" "build" "@runtest"]
 build-doc: [ "dune" "build" "@doc" ]
