adjust dune file.

--- a/dune
+++ b/dune
@@ -3,3 +3,6 @@
  (libraries lwt.unix cmdliner aws-s3-lwt rresult cohttp cohttp-lwt-unix ptime ptime.clock.os)
  (preprocess (pps lwt_ppx ocaml-monadic)))
 
+(alias
+ (name default)
+ (deps (alias_rec all)))
