--- a/presigner.opam
+++ b/presigner.opam
@@ -22,10 +22,10 @@ available: [ ocaml-version >= "4.05.0" ]
 pin-depends: [
   [
     "aws-s3-lwt.4.5.1"
-    "git+ssh://git@github.com/UnrealAkama/aws-s3.git#cred_fetch"
+    "git+https://github.com/UnrealAkama/aws-s3.git#cred_fetch"
   ]
   [
     "aws-s3.4.5.1"
-    "git+ssh://git@github.com/UnrealAkama/aws-s3.git#cred_fetch"
+    "git+https://github.com/UnrealAkama/aws-s3.git#cred_fetch"
   ]
 ]
