--- a/presigner.opam
+++ b/presigner.opam
@@ -14,6 +14,7 @@ depends: [
   "cmdliner" {>= "1.0.0"}
   "lwt" {>= "2.7.0"}
   "lwt_ppx"
+  "cohttp-lwt-unix"
   "ocaml-monadic" {>= "0.4.0"}
   "aws-s3"
   "aws-s3-lwt"
